<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />


    <ImageView
        android:id="@+id/icon"
        android:layout_width="90dp"
        android:layout_height="92dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="366dp"
        android:layout_height="29dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_bg"
        android:text="Fill All Details For SignUp*"
        android:backgroundTint="@color/colorPrimary"
        android:textAlignment="center"
        android:textColor="@color/login_form_details"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/icon" />


    <View
        android:id="@+id/footer_line"
        android:layout_width="408dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_an_accont"
        android:textColor="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footer_line"
        app:layout_constraintBottom_toBottomOf="parent"

        />
    <TextView
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_with_facebook"
        android:textColor="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintBottom_toTopOf="@+id/footer_line"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/facebook"
        android:drawablePadding="8dp"
        />

    <View
        android:id="@+id/line1"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details"
        app:layout_constraintBottom_toTopOf="@+id/facebook_login"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/or"
        android:textColor="@color/login_form_details"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintTop_toTopOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/line2"
        app:layout_constraintStart_toEndOf="@+id/line1"

        />

    <View
        android:id="@+id/line2"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toTopOf="@+id/or"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="368dp"
        android:layout_height="61dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:background="@drawable/et_bg"
        android:hint="Full Name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:inputType="textAutoComplete"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="363dp"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/et_bg"
        android:hint="Date of Birth(DD/MM/YY)"

        android:padding="16dp"
        android:textAlignment="center"
        android:textColorHint="@color/login_form_details"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/firstname" />

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/date_of_birth"
        tools:layout_editor_absoluteX="24dp">



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

